Updated README TODO

--- a/README
+++ b/README
@@ -2,4 +2,5 @@ This is a work in progress All-In-One Calculator.
 It is meant to be able to handle anything from basic arithmetic to solving algrebraic equations and matrix calculations.
 
 TODO:
-Disect input string equation into individual operations.
+- Translate numbers in given string equation into doubles to perform operations on.
+- Perform basic operations according to Order of Operations (PEMDAS)
