--- a/README
+++ b/README
@@ -1,9 +1,12 @@
 This is a work in progress All-In-One Calculator.
 It is meant to be able to handle anything from basic arithmetic to solving algrebraic equations and matrix calculations.
 
+DONE:
+- EMDAS
+
 TODO:
-- Translate numbers in given string equation into doubles to perform operations on.
-- Perform basic operations according to Order of Operations (PEMDAS)
+- Read negative numbers
+- operate on ( )
 
 BUGS:
 - input string will read multiple '.' in same token
